@@ -11,6 +11,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 
 - **Melhorias de campos!** - Agora é possível melhorar os campos da fazendinha com os *Fertilizantes*. Os fertilizantes garantem que as plantações retornem mais plantas, e que amadureçam mais rápido. Use seus itens em `/fazendinha administrar campos`.
 - É possível ganhar fertilizantes votando na Menhera! A chance para ganhar um fertilizante ao votar é de 40%. Em atualizações futuras, será possível conseguir fertilizantes de outras formas.
+- Adicionado novo top de fazendeiros: `/top fazendeiros tipo: mais plantas apodrecidas`
 
 ### Changed
 
